# tidewave_app

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  run_macos.sh
.claude/: settings.local.json
.github/workflows/: release.yml  test.yml  tmp.yml
acp-demo-agent/: Cargo.toml
acp-demo-agent/src/: agent.rs  main.rs  mcp_manager.rs
acp-demo-agent/tests/: integration_tests.rs
phoenix-rs/: Cargo.toml
phoenix-rs/examples/: chat_server.rs
phoenix-rs/src/: channel.rs  error.rs  lib.rs  message.rs  registry.rs  serializer.rs  socket.rs  subscription.rs  testing.rs  transport.rs
phoenix-rs/tests/: integration_test.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/icons/AppIcon.icon/: icon.json
src-tauri/src/: lib.rs  main.rs  server.rs
tidewave-cli/: Cargo.toml
tidewave-cli/src/: main.rs
tidewave-core/: Cargo.toml  build.rs
tidewave-core/src/: acp.rs  acp_channel.rs  acp_legacy.rs  acp_proxy.rs  acp_server.rs  command.rs  config.rs  http_handlers.rs  lib.rs  mcp_channel.rs  mcp_remote.rs  phoenix.rs  server.rs  terminal.rs  tls.rs  utils.rs  watch.rs  watch_channel.rs  watch_demo.rs
tidewave-core/src/channels/: acp_channel.rs  mcp_channel.rs  mod.rs  watch_channel.rs
tidewave-core/src/ws/: acp.rs  connection.rs  mcp.rs  mod.rs  recording.rs  terminal.rs  upload.rs  watch.rs
tidewave-core/static/: terminal.html
tidewave-core/tests/: acp_channel_tests.rs  acp_custom_protocol_tests.rs  acp_integration_tests.rs  acp_proxy_in_memory_tests.rs  acp_proxy_tests.rs  mcp_channel_tests.rs  phoenix_watch_tests.rs  server_tests.rs  test_helpers.rs  watch_tests.rs
tidewave-core/tests/common/: mod.rs
tmp/files/: mix.exs
