[package]
name = "acp-demo-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "acp-demo-agent"
path = "src/main.rs"

[dependencies]
agent-client-protocol = "0.4.2"
rmcp = { version = "0.6.4", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
futures = "0.3"
dashmap = "6"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"