[package]
name = "tidewave-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
dashmap = "6.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
async-stream = "0.3"
anyhow = "1.0"
agent-client-protocol = "0.4.2"
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.23"
